# fifa-tracker

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.production.yml  start-dev.sh  stop-dev.sh
backend/: .env.example  AUTHENTICATION.md  CONFIGURATION.md  CORS_TROUBLESHOOTING.md  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  Dockerfile.dev  LOCAL_SETUP.md  README.md  conftest.py  docker-compose.local.yml  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  test_alternation.py  test_helper_functions.py  test_integration.py
backend/app/: config.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  matches.py  stats.py  tournaments.py  user.py
backend/app/models/: __init__.py  auth.py  match.py  player.py  response.py  tournament.py  user.py
backend/app/tests/: test_auth.py  test_elo.py  test_logging.py  test_matches.py  test_players.py  test_stats.py  test_tournaments.py  test_user_search.py
backend/app/utils/: auth.py  elo.py  google_oauth.py  helpers.py  logging.py
backend/nginx/: README.md  default
backend/scripts/: backup_database.py  check_cors.py  create_admin_user.py  create_rivalry_users.py  drop_database.py  generate_secret_key.py  migrate_last_teams.py  migrate_name_fields.py  recalculate_stats.py  reset_user_stats.py  setup_github_secrets.md  setup_nginx.sh  test_cors.py  test_env.py  test_migration.py  update_dependencies.py  update_unique_teams.py  update_user_stats.py  user_stats_manager.py
frontend/: .env.example  (+10 more)
(+47 files in other folders)
