[project]
name = "fifa-tracker-backend"
version = "0.1.0"
description = "FIFA Rivalry Tracker Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "motor>=3.5.1",
    "pymongo>=4.0.1",
    "pydantic>=2.6.4",
    "python-dotenv>=1.0.1",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.2.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "requests>=2.32.4",
]
